Add express.js to dependencies

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.25.9",
     "css-minimizer-webpack-plugin": "^4.0.0",
+    "express": "^5.1.0",
     "html-webpack-harddisk-plugin": "^2.0.0",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
